<resources>
    <string name="app_name">Permanent Memory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="source_subject_name">Source subject name</string>
    <string name="subject_name">Subject name</string>
    <string name="set_name">Set name</string>
    <string name="rename_set">Rename set</string>
    <string name="reverse_subject_name">Reverse subject name</string>
    <string name="update_subject">Update subject</string>
    <string name="add_a_subject">Add a subject</string>
    <string name="add_a_set">Add a set</string>
    <string name="add_a_card">Add a card</string>
    <string name="delete">Delete</string>
    <string name="word_of_the_day">Word of the Day</string>
    <string name="review_this_set">Review this set</string>
    <string name="not_started">Not started</string>
    <string name="in_progress">In progress</string>
    <string name="completed">Completed</string>
    <string name="needs_review">Needs review</string>
    <string name="percent_learned">%1$s%% learned</string>
    <string name="send_feedback">Send feedback</string>
    <string name="return_to_home">Return to home</string>
    <string name="learning_complete">Learning complete!</string>
    <string name="review_complete">Review complete!</string>
    <string name="review_complete_message">You\'ve successfully reviewed everything in this set!</string>
    <string name="learning_complete_message">You\'ve successfully learned everything in this set!</string>
    <string name="continue_text">Continue</string>
    <string name="play_mode">Play mode</string>
    <string name="inverse">Inverse</string>
    <string name="normal">Normal</string>
    <string name="random">Random</string>
    <string name="save_to">Save to…</string>
    <string name="export_dataset">Export dataset</string>
    <string name="import_dataset">Import dataset</string>
    <string name="import_error">Import error</string>
    <string name="ok">OK</string>
    <string name="import_successful">Import successful</string>
    <string name="data_line">%1$s  •  %2$s</string>
    <string name="play_set">Play this set</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="confirm_pls">Are you sure?</string>
    <string name="you_cannot_undo">You cannot undo this action.</string>
    <string name="text">Text</string>
    <string name="flash_card">Flash card</string>
    <string name="show_answer">Show answer</string>
    <string name="wrong">Wrong</string>
    <string name="right">Right!</string>
    <string name="review_again">Review again</string>
    <string name="subject_missing">The subject this set belongs to cannot be found.</string>
    <string name="bummer">Bummer</string>
    <string name="keep_playing">Keep playing</string>
    <string name="enable_night_mode">Enabled night mode</string>

    <plurals name="num_cards">
        <item quantity="zero">No cards</item>
        <item quantity="one">%1$s card</item>
        <item quantity="other">%1$s cards</item>
    </plurals>
</resources>
