<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/pad">

    <ProgressBar
        android:id="@+id/setProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        android:layout_marginTop="@dimen/padDouble"
        android:indeterminate="false"
        android:progress="50" />

    <ProgressBar
        android:id="@+id/reviewProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setProgress"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        android:indeterminate="false"
        tools:visibility="visible"
        android:visibility="gone"
        android:progressDrawable="@drawable/progress_bar_purple"
        android:progress="25" />

    <com.wajahatkarim3.easyflipview.EasyFlipView
        android:id="@+id/flashCardFlipView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padForIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setProgress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".75"
        app:layout_constraintHeight_percent=".667"
        app:flipOnTouch="false"
        app:flipDuration="400"
        app:flipType="horizontal"
        app:flipFrom="front"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:padding="@dimen/padDouble">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                android:padding="@dimen/pad">

                <TextView
                    android:id="@+id/questionTextHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padDouble"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="center_horizontal"
                    tools:text="Tiếng Việt"
                    android:textColor="@color/gray"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/questionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    tools:text="Giờ"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                android:padding="@dimen/pad">

                <TextView
                    android:id="@+id/answerTextHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padDouble"
                    android:layout_gravity="center_horizontal|bottom"
                    tools:text="Tiếng Việt"
                    android:textColor="@color/gray"
                    android:textAppearance="?android:textAppearanceMedium" />


                <TextView
                    android:id="@+id/answerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad"
                    android:layout_gravity="center"
                    tools:text="Giờ"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </FrameLayout>

    </com.wajahatkarim3.easyflipview.EasyFlipView>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padDouble"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/white"
        tools:visibility="gone"
        android:text="@string/show_answer" />

    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/submitIncorrectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submitCorrectButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padDouble"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/wrong" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/submitCorrectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pad"
        app:layout_constraintStart_toEndOf="@id/submitIncorrectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padDouble"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/white"
        android:text="@string/right" />



</android.support.constraint.ConstraintLayout>